@@ -9,20 +9,8 @@ import ru.practicum.shareit.user.model.User;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * Утилитарный класс для преобразования между DTO и моделью комментариев (Comment).
- * Обеспечивает маппинг:
- * - CreateCommentDto → Comment (при создании комментария);
- * - Comment → CommentDto (при возврате данных клиенту);
- * - List<Comment> → List<CommentDto> (при возврате списка комментариев).
- */
 public class CommentMapper {
-
-    /**
-     * Преобразует DTO создания комментария в сущность Comment.
-     */
     public static Comment toComment(CreateCommentDto dto, Item item, User user) {
         Comment comment = new Comment();
 
@@ -34,9 +22,6 @@ public class CommentMapper {
         return comment;
     }
 
-    /**
-     * Преобразует сущность Comment в DTO для передачи клиенту.
-     */
     public static CommentDto toCommentDto(Comment comment) {
         return new CommentDto(
                 comment.getId(),
@@ -47,15 +32,7 @@ public class CommentMapper {
         );
     }
 
-    /**
-     * Преобразует список сущностей Comment в список DTO для передачи клиенту.
-     */
     public static List<CommentDto> toCommentDto(List<Comment> comments) {
-        if (comments == null) {
-            return null;
-        }
-        return comments.stream()
-                .map(CommentMapper::toCommentDto)
-                .collect(Collectors.toList());
+        return comments != null ? comments.stream().map(CommentMapper::toCommentDto).toList() : null;
     }
 }
